# fishermann

./: Cargo.toml  LICENSE.md  README.md
data/: .gitignore  rand_gen.values  rand_gen_fen.txt
scripts/: fen2vec.py  train.py
src/: Cargo.toml  main.rs
src/src/: uci.rs
utils/csv_search/: Cargo.toml
utils/csv_search/src/: main.rs
utils/fen2vec/: Cargo.toml
utils/first_moves/: Cargo.toml
utils/first_moves/src/: main.rs  uci.rs
utils/linear/: Cargo.toml  results.txt
utils/linear/src/: main.rs
utils/pgn2csv/: Cargo.toml
utils/pgn2csv/src/: main.rs
utils/png2csv/src/: main.rs
