[package]
name = "fishermann"
version = "0.1.0"
authors = ["William Speirs <bill.speirs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#chess = "3.1"
fastrand = "1.4"
shakmaty = "0.18"
vampirc-uci = {version="0.11"}
