[package]
name = "first_moves"
version = "0.1.0"
authors = ["William Speirs <bill.speirs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# shakmaty = "0.18"
shakmaty = { git="https://github.com/niklasf/shakmaty" }
smallvec = "1.6"
vampirc-uci = {version="0.11"}
